Added launch4j and minim to pom